Implement dynamic authentication and repository fetching with encrypted credentials